New image extension is appended to the old one instead of replacing it #26478

Closed
opened 2011-03-12 17:50:50 +01:00 by Georg K · 4 comments

%%%Found in r35487 (winXP x32) & 2.56a (Ubuntu 10.04
x32)

When switching the File Type in the Image - Save As dialog, the former extension is not removed but the newly chosen one is appended to the filename.

For example untitled.png becomes untitled.png.bmp if bmp is chosen from the File Type dropdown box and it is also saved that way. If you change the FileType multiple times, the extension grows constantly leading to untitled.png.bmp.jpg.tif and so on.

What doesn't happen is a direct consecution of identical extensions like untitled.png.png

Of course, you can correct it manually, so it's not a big issue, but I thought I'd let you know anyway.%%%

%%%Found in r35487 (winXP x32) & 2.56a (Ubuntu 10.04 x32) When switching the File Type in the Image - Save As dialog, the former extension is not removed but the newly chosen one is appended to the filename. For example untitled.png becomes untitled.png.bmp if bmp is chosen from the File Type dropdown box and it is also saved that way. If you change the FileType multiple times, the extension grows constantly leading to untitled.png.bmp.jpg.tif and so on. What doesn't happen is a direct consecution of identical extensions like untitled.png.png Of course, you can correct it manually, so it's not a big issue, but I thought I'd let you know anyway.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Andrea: F12, F3, and change file type in "Save As" panel on the left hand. %%%

%%%Andrea: F12, F3, and change file type in "Save As" panel on the left hand. %%%
Member

%%%Fixed in Revision: 35544
Brought back old code, a bit improved, since only known image extensions are replaced.
One thing I noticed though is that the extension is now also corrected if the user types a wrong extension. This is caused by button callback added by Campbell. Might be good to give hint that user might want to change the image type, but could be confusing for some users.

I am closing the report for now, but let me know if we need to find a better solution, like for example Gimp does with 'guess file type from extension'.
%%%

%%%Fixed in Revision: 35544 Brought back old code, a bit improved, since only known image extensions are replaced. One thing I noticed though is that the extension is now also corrected if the user types a wrong extension. This is caused by button callback added by Campbell. Might be good to give hint that user might want to change the image type, but could be confusing for some users. I am closing the report for now, but let me know if we need to find a better solution, like for example Gimp does with 'guess file type from extension'. %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#26478
No description provided.