fix [#26478] New image extension is appended to the old one instead of replacing it Note: Extension is replaced with the new extension if it's a known image extension. Brings back old behaviour, a little bit refined.